--- a/style.css
+++ b/style.css
@@ -1,40 +1,24 @@
+/* h1{
+    color: red;
+} */
 
-
-h6{
-    font-size: 2.1em;
-    line-height: 3.4em;
-    text-align: center;
-    margin-top: 50px;
-    color: rgb(0, 0, 0);
-}
+/* #red{
+    color: red;
+} */
 
 
 
-h1{
-    font-size: 2.1em;
-    line-height: 3.4em;
-    text-align: center;
-    margin-top: 50px;
-    color: rgb(0, 0, 0);
-}
-
-
-div{
-    font-size: 1.1em;
-    line-height: 1.0em;
-    text-align: center;
-    margin-top: 50px;
-    color: rgb(0, 0, 0);
+.mein{
+    background-color: rgb(241, 160, 160);
+border: 5px solid red;
+padding: 20px;
+width: 50%;  
 }
 h1{
-    color: rgb(29, 255, 8);
+    color: red;
 }
-h6{
-    color: rgb(49, 2, 255);
-}
-h2{
-    color: lightcoral;
-}
-h3{
-    color: maroon;
+
+#blue
+{
+     color: blue;
 }
